# sibsutis-not-

./: transcript  vsim.wlf
Serial-FPGA/: .gitignore  CMakeLists.txt  README.md
Serial-FPGA/src/: gnuplot_500Hz_tone.gp  gnuplot_input.gp  test_input_hex.txt  tone500Hz.txt
Serial-FPGA/src/_lib/Audio_player/: CMakeLists.txt
Serial-FPGA/src/_lib/Audio_player/include/: Audio_player.hpp
Serial-FPGA/src/_lib/Audio_player/src/: Audio_player.cpp
Serial-FPGA/src/_lib/Audio_recorder/include/: Audio_recorder.hpp
Serial-FPGA/src/_lib/Audio_recorder/src/: Audio_recorder.cpp
Serial-FPGA/src/cmd/fpga_app/: main.cpp
Serial-FPGA/src/cmd/fpga_shift_app/: main.cpp
Serial-FPGA/src/cmd/main_app/: main.cpp
Serial-FPGA/src/cmd/terminal_app/: main.cpp
Serial-FPGA/src/lib/AtomicQueue/: CMakeLists.txt
Serial-FPGA/src/lib/AtomicQueue/include/: AtomicQueue.hpp
Serial-FPGA/src/lib/AtomicQueue/src/: AtomicQueue.cpp
Serial-FPGA/src/lib/Audio_player_v2/include/: Audio_player_v2.hpp
Serial-FPGA/src/lib/Audio_player_v2/src/: Audio_player_v2.cpp
Serial-FPGA/src/lib/Audio_recorder_v2/: CMakeLists.txt
Serial-FPGA/src/lib/Audio_recorder_v2/include/: Audio_recorder_v2.hpp
Serial-FPGA/src/lib/Audio_recorder_v2/src/: Audio_recorder_v2.cpp
Serial-FPGA/src/lib/Bench/: CMakeLists.txt
Serial-FPGA/src/lib/Bench/include/: Bench.hpp
Serial-FPGA/src/lib/Bench/src/: Bench.cpp
Serial-FPGA/src/lib/Terminal/: CMakeLists.txt
Serial-FPGA/src/lib/Terminal/include/: Terminal.hpp  painter.hpp  terminal_api.hpp
Serial-FPGA/src/lib/Terminal/src/: Terminal.cpp
Serial-FPGA/src/lib/Terminal/src/painter/: painter.cpp
Serial-FPGA/src/lib/Terminal/src/terminal_api/windows/: winapi.cpp
Serial-FPGA/src/lib/ToneGenerator/: CMakeLists.txt
Serial-FPGA/src/lib/ToneGenerator/include/: ToneGenerator.hpp
Serial-FPGA/src/lib/ToneGenerator/src/: ToneGenerator.cpp
Serial-FPGA/src/lib/xserial/: CMakeLists.txt
Serial-FPGA/src/lib/xserial/include/: xserial.hpp
Serial-FPGA/src/lib/xserial/include/protocols/: uart.hpp
Serial-FPGA/src/lib/xserial/src/: uart.cpp  xserial.cpp
Serial-FPGA/src/shared/: CodeDurationTimer.cpp  CodeDurationTimer.hpp  Mode_switcher.cpp  Mode_switcher.hpp  aes256.cpp  aes256.h  ctypes.hpp  file_open_close.cpp  file_open_close.h  uart.cpp  uart.hpp
cnt_pll/: cnt_pll.qpf  cnt_pll.qsf  cnt_pll.qws  cnt_pll.sv  mypll.qip  mypll.v  mypll_bb.v
cnt_pll/db/: cnt_pll.(0).cnf.hdb  cnt_pll.(1).cnf.cdb  cnt_pll.(1).cnf.hdb  cnt_pll.(2).cnf.hdb  cnt_pll.(3).cnf.hdb  cnt_pll.(4).cnf.hdb  cnt_pll.asm.qmsg  cnt_pll.asm.rdb  cnt_pll.asm_labs.ddb  cnt_pll.cbx.xml  cnt_pll.cmp.bpm  cnt_pll.cmp.cdb  cnt_pll.cmp.hdb  cnt_pll.cmp.idb  cnt_pll.cmp.logdb  cnt_pll.cmp.rdb  cnt_pll.db_info  cnt_pll.fit.qmsg  cnt_pll.hier_info  cnt_pll.hif  cnt_pll.lpc.html  cnt_pll.lpc.txt  cnt_pll.map.bpm  cnt_pll.map.cdb  cnt_pll.map.hdb  cnt_pll.map.kpt  cnt_pll.map.qmsg  cnt_pll.map.rdb  cnt_pll.map_bb.cdb  cnt_pll.map_bb.hdb  cnt_pll.pre_map.hdb  cnt_pll.routing.rdb  cnt_pll.rtlv.hdb  cnt_pll.rtlv_sg.cdb  cnt_pll.rtlv_sg_swap.cdb  cnt_pll.sta.qmsg  cnt_pll.sta.rdb  cnt_pll.sta_cmp.6_slow_1200mv_85c.tdb  cnt_pll.tiscmp.fast_1200mv_0c.ddb  cnt_pll.tiscmp.slow_1200mv_85c.ddb  (+5 more)
cnt_pll/greybox_tmp/: cbx_args.txt
cnt_pll/output_files/: cnt_pll.asm.rpt  cnt_pll.fit.rpt  cnt_pll.fit.summary  cnt_pll.flow.rpt  cnt_pll.jdi  cnt_pll.map.rpt  cnt_pll.map.summary  cnt_pll.pin  cnt_pll.sof
led-btn-test-quartus/: first_project.bdf  first_project.qpf  first_project.qsf  first_project.qws
led-btn-test-quartus/db/: .cmp.kpt  first_project.(0).cnf.cdb  first_project.(0).cnf.hdb  first_project.analyze_file.qmsg  first_project.asm.qmsg  first_project.asm.rdb  first_project.cbx.xml  first_project.cmp.bpm  first_project.cmp.cdb  first_project.cmp.hdb  first_project.cmp.idb  first_project.cmp.rdb  first_project.cmp_merge.kpt  first_project.db_info  first_project.fit.qmsg  first_project.hier_info  first_project.hif  first_project.map.cdb  first_project.map.hdb  first_project.map.kpt  first_project.map.qmsg  first_project.map.rdb  first_project.map_bb.cdb  (+15 more)
project/: Hilbert_Realtime.slx  hilbert_example.slx  hilbert_example.slx.original  hilbert_example.slxc
second_project_modelsim/: cnt_en_testbanch .cr.mti  cnt_en_testbanch .mpf  transcript
sysverilog/: cnt_en_testbanch.sv  counter_enbl.sv  trigger_x.sv
test/: test.qpf  test.qsf  test.sv  test.sv.bak
test-bench-work/: cnt_en_testbanch.sv  cnt_pll.sv  counter_enbl.sv  trigger_x.sv
uart_implementation/: fifo.sv  fifo.sv.bak  pll.bsf  pll.cmp  pll.inc  pll.mif  pll.ppf  pll.v  pll_bb.v  pll_inst.v  shift_reg.sv  shift_reg.sv.bak  uart.qpf  uart.qsf  uart.qws  uart.sv  uart.sv.bak  uart_nativelink_simulation.rpt  uart_rx.sv  uart_rx.sv.bak  uart_tb.sv  uart_tx.sv  uart_tx.sv.bak
work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qpg  _lib1_0.qtl
(+238 files in other folders)
